--- a/index.html
+++ b/index.html
@@ -1,22 +1,194 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pablo Moreno</title>
-  </head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>Pablo Moreno</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+
+    <!-- Google Fonts -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans:300,400" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/4f6a4b08efdad6bb29f9cc801f5c07e263b39907/devicon.min.css">
+
+
+    <link rel="stylesheet" href="css/styles.css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- Leave those next 4 lines if you care about users using IE8 -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
   <body>
-    <div id="header">
-      <div class="nav">
-        <a href="#about_me">Pablo Moreno</a>
-        <ul class="navigation_list">
-          <li><a href="#about_me">About Me</a></li>
-          <li><a href="#coursework">Coursework</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#connect">Connect</a></li>
-        </ul>
+
+  <div class="container-fluid">
+
+    <div class="row text-center row-header">
+      <div class="col-xs-12">
+        <div class="header-col">
+          <img src="img/profiler.png" alt="profile pic" class="img-responsive profile-pic center-block">
+          <h1>Pablo Moreno</h1>
+          <h2>Full-time Engineer, Part-time Comedian</h2>
+          <a href="mailto:pablo.alex.moreno@gmail.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>pablo.alex.moreno@gmail.com</a>
+        </div>
+
       </div>
     </div>
-  </body>
 
+    <!-- Technical Experience -->
+    <section>
+
+      <div class="row">
+        <div class="col xs-12">
+          <h1 class="text-center section-heading"><b>Education</b></h1>
+        </div>
+      </div>
+
+      <div class="row text-center">
+        <div class="col-xs-12">
+          <div class="list-container">
+            <img src="img/asu-logo.png" class="edu-logo" align="left">
+            <h3>Arizona State University</h3>
+            <p>B.S.E. Mechanical Engineering</p>
+            <p>Ira A. Fulton Schools of Engineering</p>
+            <p>GPA: 3.00/4.00</p>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <hr>
+
+    <!-- Technical Skills -->
+    <section>
+
+      <div class="row">
+        <div class="col xs-12">
+          <h1 class="text-center section-heading"><b>Technical Skills</b></h1>
+        </div>
+      </div>
+
+      <div class="row text-center">
+        <div class="col-xs-12">
+          <div class="list-container">
+            <h3>Software</h3>
+            <p>JMP, MINITAB, Labview</p>
+            <p><img src="img/matlab.png" class="matlab-logo"></i>&nbsp;MATLAB</p>
+            <p>CAD, FEA</p>
+            <p><i class="devicon-cplusplus-plain colored"></i>&nbsp;C/C++ Arduino</p>
+            <p><img src="img/solidworks.png" class="sw-logo">&nbsp;Catia, ProE, SOLIDWORKS, NX Unigraphics, Nastran</p>
+            <p><img src="img/autocad.png" class="matlab-logo"></i>&nbsp;AUTOCAD, ANSYS, ABAQUS</p>
+            <p><img src="img/ms-office.png" class="ms-logo">&nbsp;Microsoft - Excel, PowerPoint, Outlook, Project, Word</p>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <hr>
+
+
+
+
+
+
+  <!-- Projects -->
+  <!--
+  <section style="margin-top:0">
+
+    <div class="row">
+      <div class="col xs-12">
+        <h1 class="text-center section-heading">Work</h1>
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col-sm-8 col-sm-offset-2">
+
+        <div class="col-lg-8">
+          <img src="img/projects/jobbie1.png" alt="" class="img-responsive center-block">
+        </div>
+
+        <div class="col-lg-4">
+          <h3>Jobb.ie</h3>
+          <p>A simple web app built to quickly find jobs in Ireland. Users enter the search term and desired county, and are offered job listings from 3 of the most popular job sites in Ireland</p>
+          <p><a href="http://jobb.ie/">Launch</a></p>
+        </div>
+
+        <div class="col-xs-12 text-center">
+          <img src="img/techlogos/android.png" alt="android logo" class="techlogo">
+          <img src="img/techlogos/androidstudio.png" alt="firebase logo" class="techlogo">
+          <img src="img/techlogos/java.png" alt="android studio logo" class="techlogo">
+          <img src="img/techlogos/firebase.png" alt="java logo" class="techlogo">
+        </div>
+
+      </div>
+
+    </div>
+
+
+  </section>
+
+  <hr>
+
+
+  <section>
+    <div class="row">
+      <div class="col xs-12">
+        <h1 class="text-center section-heading">Tools</h1>
+      </div>
+    </div>
+
+    <div class="row text-center">
+      <div class="col-xs-12">
+        <div class="list-container">
+            <span class="tech-tool-item">
+              <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
+              Android Studio
+            </span>
+            <span class="tech-tool-item">
+              <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
+              Microsoft Visual Studios
+            </span>
+            <span class="tech-tool-item">
+              <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
+              IntelliJ IDEA
+            </span>
+            <span class="tech-tool-item">
+              <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
+              TortoiseGit
+            </span>
+            <span class="tech-tool-item">
+              <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
+              FireBase
+            </span>
+        </div>
+      </div>
+    </div>
+  </section>
+-->
+
+
+    <div class="row row-footer">
+      <div class="col footer-col text-center">
+        <h3>I'm available for work</h3>
+        <a href="mailto:pablo.alex.moreno@gmail.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>pablo.alex.moreno@gmail.com</a>
+      </div>
+    </div>
+
+    </div> <!-- end container -->
+
+    <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  </body>
 </html>
