--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 
     <hr>
 
-    <!-- Technical Skills -->
+
+
     <section>
 
       <div class="row">
@@ -80,13 +81,19 @@
         <div class="col-xs-12">
           <div class="list-container">
             <h3>Software</h3>
-            <p>JMP, MINITAB, Labview</p>
+            <p><img src="img/minitab.png" class="minitab-logo">&nbsp;JMP, MINITAB, Labview</p>
             <p><img src="img/matlab.png" class="matlab-logo"></i>&nbsp;MATLAB</p>
             <p>CAD, FEA</p>
             <p><i class="devicon-cplusplus-plain colored"></i>&nbsp;C/C++ Arduino</p>
             <p><img src="img/solidworks.png" class="sw-logo">&nbsp;Catia, ProE, SOLIDWORKS, NX Unigraphics, Nastran</p>
             <p><img src="img/autocad.png" class="matlab-logo"></i>&nbsp;AUTOCAD, ANSYS, ABAQUS</p>
             <p><img src="img/ms-office.png" class="ms-logo">&nbsp;Microsoft - Excel, PowerPoint, Outlook, Project, Word</p>
+
+            <br /><br />
+
+            <h3>Hardware</h3>
+            <p>3D & SLA Printing, Machining, Water/Laser Jetting</p>
+            <p>FMEA, BOM, DFMA</p>
           </div>
         </div>
       </div>
@@ -95,6 +102,30 @@
 
     <hr>
 
+    <!-- Work Experience -->
+    <section>
+
+      <div class="row">
+        <div class="col xs-12">
+          <h1 class="text-center section-heading"><b>Work Experience</b></h1>
+        </div>
+      </div>
+
+      <div class="row text-center">
+        <div class="col-xs-12">
+          <div class="list-container">
+            <h3>Dysart Products International - Buckeye, AZ</h3>
+            <p>Mechanical Design Engineer, July 2017 - Present</p>
+            <p><i>Design and verify molds for casting and injection molding through SolidWorks.</i></p>
+            <p><i>Use additive and SLA printing for both prototyping and manufacturing.</i></p>
+
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <hr>
 
 
 
@@ -182,6 +213,9 @@
       <div class="col footer-col text-center">
         <h3>I'm available for work</h3>
         <a href="mailto:pablo.alex.moreno@gmail.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>pablo.alex.moreno@gmail.com</a>
+      </div>
+      <div class="credits">
+      <p>Created by <a href="andygandara.github.io">Andy Gandara</a></p>
       </div>
     </div>
 
