--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="col-xs-12">
           <div class="list-container">
             <h3>Software</h3>
-            <p><&nbsp;JMP, MINITAB, Labview</p>
+            <p>&nbsp;JMP, MINITAB, Labview</p>
             <p><img src="img/matlab.png" class="matlab-logo"></i>&nbsp;MATLAB</p>
             <p>CAD, FEA</p>
             <p><i class="devicon-cplusplus-plain colored"></i>&nbsp;C/C++ Arduino</p>
