--- a/index.html
+++ b/index.html
@@ -113,12 +113,27 @@
 
       <div class="row text-center">
         <div class="col-xs-12">
-          <div class="list-container">
+          <div class="list-container-work-ex">
             <h3>Dysart Products International - Buckeye, AZ</h3>
-            <p>Mechanical Design Engineer, July 2017 - Present</p>
+            <p>Mechanical Design Engineer, Jul. 2017 - Present</p>
             <p><i>Design and verify molds for casting and injection molding through SolidWorks.</i></p>
             <p><i>Use additive and SLA printing for both prototyping and manufacturing.</i></p>
+            <p><i>Refine and oversee manufacturing of injection molded and open cast polyurethane vehicle components.</i></p>
+            <p><i>Work with Global Shop ERP System for inventory and process management.</i></p>
 
+            <br /><br />
+
+            <h3>Yuma Proving Grounds - Yuma, AZ</h3>
+            <p>Combat Vehicle Test Engineer, Jun. 2016 - Jan. 2017</p>
+            <p><i>Tested vehicles’ driving and firing capabilities through a spectrum of vehicle testing standards.</p></i>
+            <p><i>Established the BOM (Bill of Materials) for the project scope and Material Management.</i></p>
+            <p><i>Managed multiple support teams (sensor instrumentation, mechanics, and vehicle operators) to orchestrate weapons tests in various firing ranges and tracks.</i></p>
+
+            <br /><br />
+
+            <h3>University of Arizona Agricultural Deptartment - Yuma, AZ</h3>
+            <p>Test Design Engineer, Jun. 2015 - Jul. 2015</p>
+            <p><i>Developed a prototype pesticide spraying device for crop weeding.</i></p>
           </div>
         </div>
       </div>
