--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <a href="mailto:pablo.alex.moreno@gmail.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>pablo.alex.moreno@gmail.com</a>
       </div>
       <div class="credits">
-      <p>Created by <a href="https://andygandara.github.io">Andy Gandara</a></p>
+      <p>Created by <a href="https://andygandara.github.io" target="_blank">Andy Gandara</a></p>
       </div>
     </div>
 
