--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <div class="row text-center">
         <div class="col-xs-12">
           <div class="list-container">
-            <img src="img/asu-logo.png" class="edu-logo" align="left">
-            <h3>Arizona State University</h3>
+            <!-- <img src="img/asu-logo.png" class="edu-logo" align="left"> -->
+            <h3><img src="img/asu-logo.png" class="edu-logo">&nbsp;&nbsp;Arizona State University</h3>
             <p>B.S.E. Mechanical Engineering</p>
             <p>Ira A. Fulton Schools of Engineering</p>
             <p>GPA: 3.00/4.00</p>
