--- a/index.html
+++ b/index.html
@@ -134,6 +134,41 @@
             <h3>University of Arizona Agricultural Deptartment - Yuma, AZ</h3>
             <p>Test Design Engineer, Jun. 2015 - Jul. 2015</p>
             <p><i>Developed a prototype pesticide spraying device for crop weeding.</i></p>
+            <p><i>3D CAD modelling of Prototypes for Mechanical Equipment using AUTOCAD, SOLIDWORKS, CATIA AND PROE</i></p>
+            <p><i>Worked closely with the test design team in coding and implementing an Arduino-driven solenoid spray device to be driven on a motorized track for testing.</i></p>
+
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <hr>
+
+    <section>
+
+      <div class="row">
+        <div class="col xs-12">
+          <h1 class="text-center section-heading"><b>Academic Projects & Involvement</b></h1>
+        </div>
+      </div>
+
+      <div class="row text-center">
+        <div class="col-xs-12">
+          <div class="list-container-work-ex">
+            <h3>Arizona State University - Tempe, AZ</h3>
+            <p>Test Design Engineer, May 2017 - Present</p>
+            <p><i>Currently designing submersible drone to explore the SRP canals.</i></p>
+            <p><i>Overseeing purchasing, designing, programming, and testing independently.</i></p>
+            <p><i>Bi-weekly meetings for design reviews with the leading professor.</i></p>
+
+            <br /><br />
+
+            <h3>NASA Space Grant Robotics - Tempe, AZ</h3>
+            <p>Mechanical Lead</p>
+
+
+
           </div>
         </div>
       </div>
