--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <p><img src="img/autocad.png" class="matlab-logo"></i>&nbsp;AUTOCAD, ANSYS, ABAQUS</p>
             <p><img src="img/ms-office.png" class="ms-logo">&nbsp;Microsoft - Excel, PowerPoint, Outlook, Project, Word</p>
 
-            <br /><br />
+            <br />
 
             <h3>Hardware</h3>
             <p>3D & SLA Printing, Machining, Water/Laser Jetting</p>
@@ -115,24 +115,24 @@
         <div class="col-xs-12">
           <div class="list-container-work-ex">
             <h3>Dysart Products International - Buckeye, AZ</h3>
-            <p>Mechanical Design Engineer, Jul. 2017 - Present</p>
+            <p><b>Mechanical Design Engineer, Jul. 2017 - Present</b></p>
             <p><i>Design and verify molds for casting and injection molding through SolidWorks.</i></p>
             <p><i>Use additive and SLA printing for both prototyping and manufacturing.</i></p>
             <p><i>Refine and oversee manufacturing of injection molded and open cast polyurethane vehicle components.</i></p>
             <p><i>Work with Global Shop ERP System for inventory and process management.</i></p>
 
-            <br /><br />
+            <br />
 
             <h3>Yuma Proving Grounds - Yuma, AZ</h3>
-            <p>Combat Vehicle Test Engineer, Jun. 2016 - Jan. 2017</p>
+            <p><b>Combat Vehicle Test Engineer, Jun. 2016 - Jan. 2017</b></p>
             <p><i>Tested vehicles’ driving and firing capabilities through a spectrum of vehicle testing standards.</p></i>
             <p><i>Established the BOM (Bill of Materials) for the project scope and Material Management.</i></p>
             <p><i>Managed multiple support teams (sensor instrumentation, mechanics, and vehicle operators) to orchestrate weapons tests in various firing ranges and tracks.</i></p>
 
-            <br /><br />
+            <br />
 
             <h3>University of Arizona Agricultural Deptartment - Yuma, AZ</h3>
-            <p>Test Design Engineer, Jun. 2015 - Jul. 2015</p>
+            <p><b>Test Design Engineer, Jun. 2015 - Jul. 2015</b></p>
             <p><i>Developed a prototype pesticide spraying device for crop weeding.</i></p>
             <p><i>3D CAD modelling of Prototypes for Mechanical Equipment using AUTOCAD, SOLIDWORKS, CATIA AND PROE</i></p>
             <p><i>Worked closely with the test design team in coding and implementing an Arduino-driven solenoid spray device to be driven on a motorized track for testing.</i></p>
@@ -157,15 +157,26 @@
         <div class="col-xs-12">
           <div class="list-container-work-ex">
             <h3>Arizona State University - Tempe, AZ</h3>
-            <p>Test Design Engineer, May 2017 - Present</p>
+            <p><b>Test Design Engineer, May 2017 - Present</b></p>
             <p><i>Currently designing submersible drone to explore the SRP canals.</i></p>
             <p><i>Overseeing purchasing, designing, programming, and testing independently.</i></p>
             <p><i>Bi-weekly meetings for design reviews with the leading professor.</i></p>
 
-            <br /><br />
+            <br />
 
             <h3>NASA Space Grant Robotics - Tempe, AZ</h3>
-            <p>Mechanical Lead</p>
+            <p><b>Mechanical Lead</b></p>
+            <p><i>Designed and manufactured 2 competitive submersible robots for interscholastic and national competitions.</p>
+            <p>Used additive and SLA printing for both prototyping and manufacturing.</p>
+            <p>Focused in designing, manufacturing (water jetting and 3D printing), coding and testing aquatic competition robot for annual MATE submersible robotics competition.</i></p>
+
+            <br />
+
+            <h3>Sun Devil Robotics Club - Tempe, AZ</h3>
+            <p><b>Mechanical Designer, Jun. 2013 - May 2017</p></b>
+            <p><i>Designed and manufactured 2 competitive robots for interscholastic and national competitions.</p>
+            <p>Mechanical lead in statewide 2013 & 2014 VEX Robotics Challenge for ASU.</p>
+            <p>Programmed, machined, and implemented robotic controls though Arduino and MIT App Inventor for remote controls.</i></p>
 
 
 
