--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 
             <h3>University of Arizona Agricultural Deptartment - Yuma, AZ</h3>
             <p><b>Test Design Engineer, Jun. 2015 - Jul. 2015</b></p>
+            <img src="img/drone_model.png"><br /><br />
             <p><i>Developed a prototype pesticide spraying device for crop weeding.</i></p>
             <p><i>3D CAD modelling of Prototypes for Mechanical Equipment using AUTOCAD, SOLIDWORKS, CATIA AND PROE</i></p>
             <p><i>Worked closely with the test design team in coding and implementing an Arduino-driven solenoid spray device to be driven on a motorized track for testing.</i></p>
@@ -155,12 +156,14 @@
 
       <div class="row text-center">
         <div class="col-xs-12">
-          <div class="list-container-work-ex">
+          <div class="list-container-academic-ex">
             <h3>Arizona State University - Tempe, AZ</h3>
             <p><b>Test Design Engineer, May 2017 - Present</b></p>
+            <img src="img/microsub.jpg"><br /><br />
             <p><i>Currently designing submersible drone to explore the SRP canals.</i></p>
             <p><i>Overseeing purchasing, designing, programming, and testing independently.</i></p>
             <p><i>Bi-weekly meetings for design reviews with the leading professor.</i></p>
+
 
             <br />
 
