--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <br />
 
             <h3>NASA Space Grant Robotics - Tempe, AZ</h3>
-            <p><b>Mechanical Lead</b></p>
+            <p><b>Mechanical Lead, Jul. 2014 - May 2017</b></p>
             <p><i>Designed and manufactured 2 competitive submersible robots for interscholastic and national competitions.</p>
             <p>Used additive and SLA printing for both prototyping and manufacturing.</p>
             <p>Focused in designing, manufacturing (water jetting and 3D printing), coding and testing aquatic competition robot for annual MATE submersible robotics competition.</i></p>
