--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <![endif]-->
   </head>
   <body>
-
+  <div id="top"></div>
   <div class="container-fluid">
 
     <div class="row text-center row-header">
@@ -42,9 +42,19 @@
       </div>
     </div>
 
+    <div class="tabs">
+      <hr>
+      <a href="#edu"><b>Education</a>
+      <a href="#tech-skills">Technical Skills</a>
+      <a href="#work">Work Experience</a>
+      <a href="#academic">Academic Projects</b></a>
+      <hr>
+    </div>
+
+
     <!-- Technical Experience -->
     <section>
-
+      <div id="edu"></div>
       <div class="row">
         <div class="col xs-12">
           <h1 class="text-center section-heading"><b>Education</b></h1>
@@ -70,7 +80,7 @@
 
 
     <section>
-
+      <div id="tech-skills"></div>
       <div class="row">
         <div class="col xs-12">
           <h1 class="text-center section-heading"><b>Technical Skills</b></h1>
@@ -104,7 +114,7 @@
 
     <!-- Work Experience -->
     <section>
-
+      <div id="work"></div>
       <div class="row">
         <div class="col xs-12">
           <h1 class="text-center section-heading"><b>Work Experience</b></h1>
@@ -147,10 +157,10 @@
     <hr>
 
     <section>
-
+      <div id="academic"></div>
       <div class="row">
         <div class="col xs-12">
-          <h1 class="text-center section-heading"><b>Academic Projects & Involvement</b></h1>
+          <h1 class="text-center section-heading"><b>Academic Projects</b></h1>
         </div>
       </div>
 
@@ -190,6 +200,10 @@
     </section>
 
     <hr>
+
+    <div class="back-to-top">
+    <a href="#top">Back to Top</a>
+    </div>
 
 
 
