--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div class="row text-center">
         <div class="col-xs-12">
           <div class="list-container-work-ex">
-            <h3>Dysart Products International - Buckeye, AZ</h3>
+            <h3>Daystar Products International - Buckeye, AZ</h3>
             <p><b>Mechanical Design Engineer, Jul. 2017 - Present</b></p>
             <p><i>Design and verify molds for casting and injection molding through SolidWorks.</i></p>
             <p><i>Use additive and SLA printing for both prototyping and manufacturing.</i></p>
