--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
 
     <div class="tabs">
       <hr>
-      <a href="#edu"><b>Education</a>
-      <a href="#tech-skills">Technical Skills</a>
-      <a href="#work">Work Experience</a>
-      <a href="#academic">Academic Projects</b></a>
+      <ul class="navigation_list">
+        <li><a href="#edu">Education</a></li>
+        <li><a href="#tech-skills">Technical Skills</a></li>
+        <li><a href="#work"> Work Experience</a></li>
+        <li><a href="#academic">Academic Projects</a></li>
+      </ul>
       <hr>
     </div>
 
